--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Jeu 404</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="404/style.css">
   </head>
   <body>
 
@@ -21,8 +21,8 @@
     <button type="button" name="button" onClick="nextLevel()" disabled id="nextBtn">Continuer</button>
     <button type="button" name="button" onClick="resetProgression()">Reset progression</button>
 
-    <script type="text/javascript" src="mousetrap.min.js"></script>
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="404/mousetrap.min.js"></script>
+    <script type="text/javascript" src="404/main.js"></script>
 
   </body>
 </html>
