--- a/404.html
+++ b/404.html
@@ -10,6 +10,13 @@
     <h1>404 game</h1>
     <h2>Niveau <span id="level">0</span></h2>
 
+    <p>Pour vous déplacer, utilisez les touches : <br/>
+-ZQSD pour le 4 ROUGE<br/>
+-IJKL pour le 0 JAUNE<br/>
+-Flèches directionnelles pour le 4 VIOLET<br/>
+Votre pion ne s'arrête quand lorsqu'il entre en contact avec un mur ou un autre pion.<br/>
+Votre but est d'atteindre le DRAPEAU ROUGE avec le 4 ROUGE</p>
+
     <div id="game">
       <div id="flag"></div>
       <div class="player" id="playerA"></div>
