--- a/404.html
+++ b/404.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Jeu 404</title>
     <link rel="stylesheet" href="404/style.css">
+    <link rel="icon" href="flaque.jpg" >
   </head>
   <body>
 
