--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <title>Précarigouv</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, minimal-ui, shrink-to-fit=no" />
-	<link rel="icon" href="img/logo.png" type="image/png    "/>
-	<link rel="icon" href="img/logo.png" >
+	<link rel="icon" href="flaque.jpg" >
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
