--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Précarigouv</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, minimal-ui, shrink-to-fit=no" />
+
 	<link rel="icon" href="flaque.jpg" >
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -43,7 +44,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="#section2">Simulations</a></li>
                     <li><a href="#section3">Ressources</a></li>
-                    <li><a href="lien vers le jeu">Gagner 10000€</a></li>
+                    <li id="last"><a href="https://drive.google.com/file/d/1UIhhI3X3UTzOTR5aDyho4COgxoDJHUra/view?usp=sharing">Gagnez 10 000€ !</a></li>
                 </ul>
             </div>
         </div>
@@ -79,7 +80,7 @@
                         <div class="simulation-text">
 
                             <p class="sub-text" style="font-size: 18px;">
-                                <span class="underline">Veuillez remplir ce formulaire pour simuler les aides auquels vous avez droit</span>
+                                <span class="underline">Veuillez remplir ce formulaire pour simuler les aides auxquelles vous avez droit</span>
                             </p>
 
                             <div class="col-sm-12 form wow fadeInRight">
@@ -128,7 +129,7 @@
 
                                     <label for="" class="underline">Touchez-vous les aides suivantes ?</label>
                                     <div class="checkbox">
-                                        <input type="checkbox" id="jeursane"/>
+                                        <input type="checkbox" id="rsa"/>
                                         <label for="rsa">RSA (Revenu de Solidarité Active)</label> <br>
                                         <input type="checkbox" id="allocfamille"/>
                                         <label for="allocfamille">Allocations familiales</label> <br>
@@ -209,7 +210,6 @@
                                     <p class="sub-text underline" style="font-size: 22px;">Scolarité</p>
                                     <a href="https://www.letudiant.fr/"><p class="sub-text"></p>https://www.letudiant.fr/</p></a>
                                     <a href="http://www.onisep.fr/"><p class="sub-text"></p>http://www.onisep.fr/</p></a>
-                                    <a href="https://studyassur.com/fr/liens-utiles-179.html"><p class="sub-text"></p>https://studyassur.com/fr/liens-utiles-179.html</p></a>
                                     <a href="https://www.messervices.etudiant.gouv.fr/envole/"><p class="sub-text"></p>https://www.messervices.etudiant.gouv.fr/envole/</p></a>
                                 </div>
                             </div>
